--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "send-posts-to-telegram-plugin",
+	"name": "Send Posts to Telegram Plugin",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Plugin for sending posts to Telegram .",
+	"author": "Alona Nechaieva (alonadp)",
+	"authorUrl": "https://github.com/alonadp",
 	"isDesktopOnly": false
 }
